--- a/Sheka/.obsidian/workspace
+++ b/Sheka/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "Base/Roadmap 2022.md",
-            "mode": "preview"
+            "mode": "source"
           }
         }
       }
@@ -118,14 +118,14 @@
   "active": "131ef51d297002b6",
   "lastOpenFiles": [
     "Base/Roadmap 2022.md",
-    "Base/Software Engineering/Spring/Core/Spring.md",
+    "Base/Software Engineering/Spring/Validation API.md",
+    "Base/Software Engineering/Spring/Core/Profiles.md",
+    "Base/Software Engineering/Spring/Core/Inversion of Control.md",
     "Base/My Roadmap.md",
-    "Base/_Brain.md",
-    "Base/Software Engineering/RTF to HTML.md",
-    "Base/_Мой Zettelkasten.md",
-    "Base/Other/Правильное питание.md",
-    "Base/Other/Texts.md",
-    "Base/Other/Без названия.md",
-    "Base/Other/WB.md"
+    "Base/Software Engineering/Spring/Core/Bean scopes.md",
+    "Base/Software Engineering/Spring/Core/Bean life cycle.md",
+    "Base/Software Engineering/Spring/Core/Autowiring.md",
+    "Base/Software Engineering/Spring/Core/Spring.md",
+    "Base/_Brain.md"
   ]
 }
