--- a/Sheka/.obsidian/workspace
+++ b/Sheka/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "Base/Roadmap 2022.md",
-            "mode": "source"
+            "mode": "preview"
           }
         }
       }
@@ -83,7 +83,7 @@
                 "showSearch": false,
                 "searchQuery": "",
                 "backlinkCollapsed": false,
-                "unlinkedCollapsed": false
+                "unlinkedCollapsed": true
               }
             }
           },
@@ -112,18 +112,17 @@
       }
     ],
     "direction": "horizontal",
-    "width": 382,
-    "collapsed": true
+    "width": 382
   },
   "active": "131ef51d297002b6",
   "lastOpenFiles": [
     "Base/Roadmap 2022.md",
+    "Base/My Roadmap.md",
+    "Base/Software Engineering/Spring/Core/Bean life cycle.md",
     "Base/Software Engineering/Spring/Validation API.md",
     "Base/Software Engineering/Spring/Core/Profiles.md",
     "Base/Software Engineering/Spring/Core/Inversion of Control.md",
-    "Base/My Roadmap.md",
     "Base/Software Engineering/Spring/Core/Bean scopes.md",
-    "Base/Software Engineering/Spring/Core/Bean life cycle.md",
     "Base/Software Engineering/Spring/Core/Autowiring.md",
     "Base/Software Engineering/Spring/Core/Spring.md",
     "Base/_Brain.md"
