--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Sheka/Base/Software Engineering/Spring/Core/Bean scopes.md",
-            "mode": "source"
+            "file": "Sheka/Base/Roadmap 2022.md",
+            "mode": "preview"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Sheka/Base/Software Engineering/Spring/Core/Bean scopes.md",
+                "file": "Sheka/Base/Roadmap 2022.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,13 +88,13 @@
   },
   "active": "75e863c4133dfe85",
   "lastOpenFiles": [
+    "Sheka/Base/Roadmap 2022.md",
     "Sheka/Base/Software Engineering/Spring/Core/Bean scopes.md",
     "Sheka/Base/Software Engineering/Spring/Core/Bean life cycle.md",
     "Sheka/Base/Software Engineering/Spring/Core/Inversion of Control.md",
     "Sheka/Templates/New note.md",
     "Sheka/Base/Software Engineering/Spring/Core/Spring.md",
     "Sheka/Base/Software Engineering/Spring/Core/Autowiring.md",
-    "Sheka/Base/Roadmap 2022.md",
     "Sheka/Base/My Roadmap.md",
     "Sheka/Base/С чем я работал.md",
     "Sheka/Base/Software Engineering/Spring/Spring Boot Dev tools.md"
