--- a/Sheka/.obsidian/workspace
+++ b/Sheka/.obsidian/workspace
@@ -4,28 +4,15 @@
     "type": "split",
     "children": [
       {
-        "id": "3aa4c6a4ac87ee94",
+        "id": "41258609d814b09a",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Base/Software Engineering/Git.md",
-            "mode": "preview"
-          }
-        },
-        "group": "aa23cb6ab3db8c4f"
-      },
-      {
-        "id": "886b4e4e895de0fd",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Base/Software Engineering/Git.md",
+            "file": "Base/Личный рост/Режим дня.md",
             "mode": "source"
           }
-        },
-        "group": "aa23cb6ab3db8c4f"
+        }
       }
     ],
     "direction": "vertical"
@@ -52,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "git",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -89,7 +76,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Base/Software Engineering/Git.md",
+                "file": "Base/Личный рост/Режим дня.md",
                 "collapseAll": true,
                 "extraContext": true,
                 "sortOrder": "alphabetical",
@@ -117,7 +104,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Base/Software Engineering/Git.md"
+                "file": "Base/Личный рост/Режим дня.md"
               }
             }
           }
@@ -127,17 +114,17 @@
     "direction": "horizontal",
     "width": 245.71572875976562
   },
-  "active": "3aa4c6a4ac87ee94",
+  "active": "41258609d814b09a",
   "lastOpenFiles": [
+    "Base/Личный рост/Режим дня.md",
     "Base/Software Engineering/Git.md",
-    "Base/Личный рост/Software engineering work.md",
-    "Base/Личный рост/Мой менеджмент.md",
-    "Base/Hybris/komus.md",
-    "Base/Личный рост/English work.md",
     "Base/Личный рост/Прочитанные книги.md",
-    "Base/Личный рост/Заметки по книгам/Преимущество счастья. Шон Ачор.md",
-    "Base/Software Engineering/JavaScript.md",
+    "Base/Личный рост/Мой менеджмент.md",
     "Base/Личный рост/Осознанная практика.md",
-    "Base/Other/_Мой Zettelkasten.md"
+    "Base/Benefit project.md",
+    "Base/Личный рост/Software engineering work.md",
+    "Base/Личный рост/Заметки по книгам/Преимущество счастья. Шон Ачор.md",
+    "Base/Личный рост/English work.md",
+    "Base/Other/Правильное питание.md"
   ]
 }
